datasource db {
    provider = "mongodb"
    url      = env("DATABASE_URL")
}

generator client {
    provider = "prisma-client-js"
}

model User {
    id String @id @default(auto()) @map("_id") @db.ObjectId
    email String @unique
    passwordHash String?
    googleId String?
    name String?
    picture String?
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    profile Profile?
    preference Preference?
    swipesFrom Swipe[] @relation("SwipeFrom")
    swipesTo Swipe[] @relation("SwipeTo")
    matchesA Match[] @relation("MatchUserA")
    matchesB Match[] @relation("MatchUserB")
}


model Profile {
    id String @id @default(auto()) @map("_id") @db.ObjectId
    userId String @unique @db.ObjectId

    // Basic Info (from onboarding step 1)
    name        String?
    age         Int?
    gender      String?
    bio         String?
    photos      String[]  // Array of photo URLs

    // Location & Housing
    city        String?
    hasRoom     Boolean   @default(false)
    occupation  String?

    // Lifestyle (from onboarding step 2-3)
    sleepSchedule String?  // 'early-bird' | 'night-owl' | 'flexible'
    noiseLevel    Int?     // 1-5 scale
    guestPolicy   String?  // 'never' | 'rarely' | 'sometimes' | 'often'
    smoking       String?  // 'no' | 'outside' | 'yes'
    pets          String?  // 'no' | 'have' | 'love' | 'allergic'

    // Status
    onboardingCompleted Boolean @default(false)

    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt
    user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Preference {
    id String @id @default(auto()) @map("_id") @db.ObjectId
    userId String @unique @db.ObjectId
    user User @relation(fields: [userId], references: [id], onDelete: Cascade)

    // Hard constraints 
    genderPreference String // male | female | any
    minBudget Int 
    maxBudget Int 
    city String 

    // lifestyle signals ( 1-5 scale )
    cleanliness Int 
    sleepSchedule Int 
    smoking Boolean
    drinking Boolean
    pets Boolean
    socialLevel Int

    // Weight configuration ( sum ~ 100 )

    weightCleanliness Int
    weightSleep Int
    weightHabits Int
    weightSocial Int
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt


}

model Swipe {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId

  fromUserId String  @db.ObjectId
  toUserId   String  @db.ObjectId

  fromUser   User    @relation("SwipeFrom", fields: [fromUserId], references: [id], onDelete: Cascade)
  toUser     User    @relation("SwipeTo", fields: [toUserId], references: [id], onDelete: Cascade)

  action     String  // "like" | "skip"

  createdAt DateTime @default(now())

  @@unique([fromUserId, toUserId])


}


model Match{
    id String @id @default(auto()) @map("_id") @db.ObjectId
    userAId String @db.ObjectId
    userBId String @db.ObjectId

    userA User @relation("MatchUserA", fields: [userAId], references: [id], onDelete: Cascade)
    userB User @relation("MatchUserB", fields: [userBId], references: [id], onDelete: Cascade)

    createdAt DateTime @default(now())
    conversation Conversation?


    @@unique([userAId, userBId])
}
// the combination of from user id , and to user id , should be unique


model Conversation {
    id String @id @default(auto()) @map("_id") @db.ObjectId
    matchId String @unique @db.ObjectId
    match Match @relation(fields: [matchId], references: [id], onDelete: Cascade)
    createdAt DateTime @default(now())
    messages Message[]
}

model Message {
    id String @id @default(auto()) @map("_id") @db.ObjectId
    conversationId String   @db.ObjectId
    senderId       String   @db.ObjectId
    content        String
    createdAt      DateTime @default(now())

    conversation   Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
}